...
    <string name="who_player">Who is He?</string>
    <string name="text_view_lineups">Lineups</string>
    <string name="text_view_goal_keeper">Goal Keeper</string>
    <string name="text_view_defense">Defense</string>

    <array name="club_teams">
        <item>English Premier League</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
        <item>Netherlands Eredivisie</item>
    </array>

</resources>

